HB-2889 Somewhat working buttons

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,7 +4,12 @@
  * mixins, etc. in this file, to prevent duplicated
  * CSS in your final, compiled files.
  */
+@charset "UTF-8";
+
+@import "~@aap/flexed/flexed/flexed";
 
 @import "../styles/functions";
 @import "../styles/mixins";
 @import "../styles/spacing";
+
+// @include reset;
