HB-2909 Prefix component for compatibility

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -72,3 +72,9 @@
   min-width: 0;
   max-width: 100%;
 }
+
+@mixin component-prefix($name) {
+  &.#{$prefix-component}#{$name} {
+    @content;
+  }
+}
