HB-2988 Wired up Vuex

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -73,8 +73,14 @@
   max-width: 100%;
 }
 
-@mixin namespace($name) {
+@mixin block($name) {
   &.#{$prefix-component}#{$name} {
+    @content;
+  }
+}
+
+@mixin b($name) {
+  @include block($name) {
     @content;
   }
 }
