--- a/src/styles/modules/_m-fields.scss
+++ b/src/styles/modules/_m-fields.scss
@@ -1,14 +1,14 @@
-@include b("form") {
-  @include element("input") {
+@include b('form') {
+  @include element('input') {
     @include border(1px solid color(agray, light));
     border-radius: $border-radius;
     background-color: color(awhite);
     width: 100%;
     outline: none;
     margin: 0;
-    @include rem-fallback("height", $height-input);
-    @include rem-fallback("padding", $space-xs);
-    @include rem-fallback("font-size", $font-size-m);
+    @include rem-fallback('height', $height-input);
+    @include rem-fallback('padding', $space-xs);
+    @include rem-fallback('font-size', $font-size-m);
 
     &:focus {
       @include border(1px solid color(ablue));
@@ -16,13 +16,13 @@
 
     &:focus,
     &.has-content {
-      @include rem-fallback("padding-bottom", $space-xxxxs);
+      @include rem-fallback('padding-bottom', $space-xxxxs);
 
       & ~ label {
-        @include rem-fallback("top", $space-xxxxs);
-        @include rem-fallback("left", $space-xs);
-        @include rem-fallback("font-size", $font-size-xs);
-        @include rem-fallback("line-height", $line-height-xxs);
+        @include rem-fallback('top', $space-xxxxs);
+        @include rem-fallback('left', $space-xs);
+        @include rem-fallback('font-size', $font-size-xs);
+        @include rem-fallback('line-height', $line-height-xxs);
         font-weight: $weight-bold;
       }
     }
@@ -36,7 +36,7 @@
     &.is-success {
       @include border(1px solid color(agreen));
       background-color: color(awhite);
-      @include rem-fallback("padding-right", $space-xl);
+      @include rem-fallback('padding-right', $space-xl);
 
       &:focus {
         @include border(1px solid color(agreen));
@@ -56,7 +56,7 @@
       background-repeat: no-repeat;
       background-position: right $space-xs center;
       background-color: color(awhite);
-      @include rem-fallback("padding-right", $space-xl);
+      @include rem-fallback('padding-right', $space-xl);
       bottom: $space-m;
       right: 1px;
       position: absolute;
@@ -77,20 +77,20 @@
     }
   }
 
-  @include element("input-small") {
+  @include element('input-small') {
     @include border(1px solid color(agray, lighter));
     border-radius: $border-radius;
     width: 100%;
     background-color: color(awhite);
-    @include rem-fallback("height", $height-input-small);
+    @include rem-fallback('height', $height-input-small);
     outline: none;
-    @include rem-fallback("padding", $space-xs);
-    @include rem-fallback("padding-bottom", $space-xxxs);
-    @include rem-fallback("font-size", $font-size-s);
+    @include rem-fallback('padding', $space-xs);
+    @include rem-fallback('padding-bottom', $space-xxxs);
+    @include rem-fallback('font-size', $font-size-s);
     // padding-right: 15%;
 
     & ~ label {
-      @include rem-fallback("top", $space-xxs);
+      @include rem-fallback('top', $space-xxs);
     }
 
     &:focus,
@@ -98,9 +98,9 @@
       @include border(1px solid color(ablue));
 
       & ~ label {
-        @include rem-fallback("top", 2px);
-        @include rem-fallback("left", $space-xs);
-        @include rem-fallback("font-size", $font-size-xxs);
+        @include rem-fallback('top', 2px);
+        @include rem-fallback('left', $space-xs);
+        @include rem-fallback('font-size', $font-size-xxs);
         font-weight: 700;
       }
     }
@@ -144,13 +144,13 @@
     }
   }
 
-  @include element("select") {
+  @include element('select') {
     appearance: none;
 
     & ~ label {
-      @include rem-fallback("top", 2px);
-      @include rem-fallback("left", 16px);
-      @include rem-fallback("font-size", 11px);
+      @include rem-fallback('top', 2px);
+      @include rem-fallback('left', 16px);
+      @include rem-fallback('font-size', 11px);
     }
 
     &.is-focus {
@@ -160,44 +160,44 @@
     }
   }
 
-  @include element("error-msg") {
+  @include element('error-msg') {
     position: absolute;
-    @include rem-fallback("right", $space-xs);
+    @include rem-fallback('right', $space-xs);
     width: 60%;
     text-align: right;
-    @include rem-fallback("font-size", $font-size-xs);
-    @include rem-fallback("line-height", $line-height-xxs);
-    @include rem-fallback("top", $space-xxxxs);
+    @include rem-fallback('font-size', $font-size-xs);
+    @include rem-fallback('line-height', $line-height-xxs);
+    @include rem-fallback('top', $space-xxxxs);
     color: color(aorange);
     pointer-events: none;
 
-    @include modifier("bottom") {
+    @include modifier('bottom') {
       color: color(aorange);
-      @include rem-fallback("font-size", 14px);
-      @include rem-fallback("line-height", 22px);
+      @include rem-fallback('font-size', 14px);
+      @include rem-fallback('line-height', 22px);
       display: inline-block;
-      @include rem-fallback("padding-bottom", 5px);
+      @include rem-fallback('padding-bottom', 5px);
 
       &.p-b-zero {
         padding-bottom: 0;
       }
     }
 
-    @include modifier("newsletter") {
-      @include rem-fallback("bottom", 45px);
+    @include modifier('newsletter') {
+      @include rem-fallback('bottom', 45px);
     }
 
-    @include modifier("footer") {
-      @include rem-fallback("bottom", 39px);
-      @include rem-fallback("right", 6px);
+    @include modifier('footer') {
+      @include rem-fallback('bottom', 39px);
+      @include rem-fallback('right', 6px);
     }
   }
 
-  @include element("label") {
+  @include element('label') {
     @include labeltext($labeltext: label-field);
-    @include rem-fallback("letter-spacing", -0.25px);
+    @include rem-fallback('letter-spacing', -0.25px);
 
-    @include modifier("focused") {
+    @include modifier('focused') {
       display: none;
     }
 
@@ -206,31 +206,31 @@
     }
   }
 
-  @include element("label-small") {
+  @include element('label-small') {
     @include labeltext($labeltext: label-field-small);
   }
 
-  @include element("card") {
+  @include element('card') {
     border-radius: $border-radius;
     background: $sixty-per-lighter-grey;
     color: color(agray);
 
-    @include modifier("sub-head") {
+    @include modifier('sub-head') {
       display: flex;
     }
 
     & .select-box {
       &__list {
-        @include rem-fallback("padding", 10px 32px 10px 16px);
+        @include rem-fallback('padding', 10px 32px 10px 16px);
         word-wrap: break-word;
       }
 
       &__dropdown {
-        @include rem-fallback("top", 39px);
+        @include rem-fallback('top', 39px);
 
         ul {
           margin: 0;
-          @include rem-fallback("max-height", 225px);
+          @include rem-fallback('max-height', 225px);
         }
       }
     }
@@ -241,51 +241,70 @@
     }
   }
 
-  @include element("card-container") {
-    @include rem-fallback("padding", 21px 25px 25px);
+  @include element('card-container') {
+    @include rem-fallback('padding', 21px 25px 25px);
   }
 
-  @include element("card-title") {
+  @include element('card-title') {
     color: color(agray, dark);
   }
 
-  @include element("card--border-gray") {
+  @include element('card--border-gray') {
     border: 1px solid color(agray, lighter);
     border-top: 0;
   }
 
-  @include element("card-top-green-bg") {
-    @include rem-fallback("border-radius", 6px 6px 0 0);
+  @include element('card-top-green-bg') {
+    @include rem-fallback('border-radius', 6px 6px 0 0);
     background: color(agreen);
-    @include rem-fallback("height", 10px);
+    @include rem-fallback('height', 10px);
   }
 
-  @include element("card-top-blue-bg") {
-    @include rem-fallback("border-radius", 6px 6px 0 0);
+  @include element('card-top-blue-bg') {
+    @include rem-fallback('border-radius', 6px 6px 0 0);
     background: color(ablue);
-    @include rem-fallback("height", 10px);
+    @include rem-fallback('height', 10px);
   }
 
-  @include element("card-top-orange-bg") {
-    @include rem-fallback("border-radius", 6px 6px 0 0);
+  @include element('card-top-orange-bg') {
+    @include rem-fallback('border-radius', 6px 6px 0 0);
     background: color(aorange);
-    @include rem-fallback("height", 10px);
+    @include rem-fallback('height', 10px);
   }
-  @include element("arrow") {
-    @include rem-fallback("width", 13px);
-    @include rem-fallback("height", 7px);
+  @include element('arrow') {
+    @include rem-fallback('width', 13px);
+    @include rem-fallback('height', 7px);
     top: 45%;
-    @include rem-fallback("right", 17px);
+    @include rem-fallback('right', 17px);
     position: absolute;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2213px%22%20height%3D%227px%22%20viewBox%3D%220%200%2010%205%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%0A%20%20%20%20%3C!--%20Generator%3A%20Sketch%2041%20(35326)%20-%20http%3A%2F%2Fwww.bohemiancoding.com%2Fsketch%20--%3E%0A%20%20%20%20%3Ctitle%3EArtboard%204%3C%2Ftitle%3E%0A%20%20%20%20%3Cdesc%3ECreated%20with%20Sketch.%3C%2Fdesc%3E%0A%20%20%20%20%3Cdefs%3E%3C%2Fdefs%3E%0A%20%20%20%20%3Cg%20id%3D%22Page-1%22%20stroke%3D%22none%22%20stroke-width%3D%221%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%0A%20%20%20%20%20%20%20%20%3Cg%20id%3D%22Artboard-4%22%20fill%3D%22%234D4D4D%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cpolygon%20id%3D%22Shape%22%20points%3D%220%200%205%205%2010%200%22%3E%3C%2Fpolygon%3E%0A%20%20%20%20%20%20%20%20%3C%2Fg%3E%0A%20%20%20%20%3C%2Fg%3E%0A%3C%2Fsvg%3E");
+    background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2213px%22%20height%3D%227px%22%20viewBox%3D%220%200%2010%205%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%0A%20%20%20%20%3C!--%20Generator%3A%20Sketch%2041%20(35326)%20-%20http%3A%2F%2Fwww.bohemiancoding.com%2Fsketch%20--%3E%0A%20%20%20%20%3Ctitle%3EArtboard%204%3C%2Ftitle%3E%0A%20%20%20%20%3Cdesc%3ECreated%20with%20Sketch.%3C%2Fdesc%3E%0A%20%20%20%20%3Cdefs%3E%3C%2Fdefs%3E%0A%20%20%20%20%3Cg%20id%3D%22Page-1%22%20stroke%3D%22none%22%20stroke-width%3D%221%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%0A%20%20%20%20%20%20%20%20%3Cg%20id%3D%22Artboard-4%22%20fill%3D%22%234D4D4D%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3Cpolygon%20id%3D%22Shape%22%20points%3D%220%200%205%205%2010%200%22%3E%3C%2Fpolygon%3E%0A%20%20%20%20%20%20%20%20%3C%2Fg%3E%0A%20%20%20%20%3C%2Fg%3E%0A%3C%2Fsvg%3E');
     background-repeat: no-repeat;
     background-position: 94% center;
     cursor: pointer;
     transition: all 300ms ease-in-out;
     pointer-events: none;
 
-    @include modifier("small") {
+    @include modifier('small') {
       top: 37%;
     }
+  }
+}
+
+.eye-icon {
+  background: url('data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2226px%22%20height%3D%2215px%22%20viewBox%3D%220%200%2026%2015%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%20%3Cg%20id%3D%22Page-1%22%20stroke%3D%22none%22%20stroke-width%3D%221%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%20opacity%3D%220.596863678%22%3E%20%3Cpath%20d%3D%22M12.6569293%2C0%20C7.8272192%2C0%203.41870471%2C2.61111111%200.189538043%2C6.88888889%20C-0.0631793478%2C7.25%20-0.0631793478%2C7.72222222%200.189538043%2C8.08333333%20C3.41870471%2C12.3333333%207.8272192%2C14.9444444%2012.6569293%2C14.9444444%20C17.4866395%2C14.9444444%2021.895154%2C12.3333333%2025.1243207%2C8.05555556%20C25.377038%2C7.69444444%2025.377038%2C7.22222222%2025.1243207%2C6.86111111%20C21.895154%2C2.61111111%2017.4866395%2C0%2012.6569293%2C0%20Z%20M12.9938859%2C12.7222222%20C9.79279891%2C12.9166667%207.12522645%2C10.3055556%207.32178442%2C7.11111111%20C7.49026268%2C4.5%209.65240036%2C2.36111111%2012.2918931%2C2.19444444%20C15.4929801%2C2%2018.1605525%2C4.61111111%2017.9639946%2C7.80555556%20C17.7955163%2C10.4444444%2015.6614583%2C12.5555556%2012.9938859%2C12.7222222%20Z%20M12.8534873%2C10.3055556%20C11.1125453%2C10.4166667%209.70855978%2C9%209.79279891%2C7.27777778%20C9.87703804%2C5.86111111%2011.0283062%2C4.72222222%2012.4603714%2C4.63888889%20C14.2013134%2C4.52777778%2015.6052989%2C5.94444444%2015.5210598%2C7.66666667%20C15.4368207%2C9.05555556%2014.2574728%2C10.2222222%2012.8534873%2C10.3055556%20Z%22%20id%3D%22Shape%22%20fill%3D%22%23B3B3B3%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%20%3C%2Fg%3E%20%3C%2Fsvg%3E');
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+  @include rem-fallback('width', 26px);
+  @include rem-fallback('height', 15px);
+  @include rem-fallback('right', $space-xxs);
+  @include rem-fallback('top', $space-l);
+  @include rem-fallback('margin-top', -$space-xxxs);
+  position: absolute;
+
+  @include element('active') {
+    background: url('data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2226px%22%20height%3D%2215px%22%20viewBox%3D%220%200%2026%2015%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%3E%20%3Cg%20id%3D%22Page-1%22%20stroke%3D%22none%22%20stroke-width%3D%221%22%20fill%3D%22none%22%20fill-rule%3D%22evenodd%22%3E%20%3Cpath%20d%3D%22M12.6569293%2C0%20C7.8272192%2C0%203.41870471%2C2.61111111%200.189538043%2C6.88888889%20C-0.0631793478%2C7.25%20-0.0631793478%2C7.72222222%200.189538043%2C8.08333333%20C3.41870471%2C12.3333333%207.8272192%2C14.9444444%2012.6569293%2C14.9444444%20C17.4866395%2C14.9444444%2021.895154%2C12.3333333%2025.1243207%2C8.05555556%20C25.377038%2C7.69444444%2025.377038%2C7.22222222%2025.1243207%2C6.86111111%20C21.895154%2C2.61111111%2017.4866395%2C0%2012.6569293%2C0%20Z%20M12.9938859%2C12.7222222%20C9.79279891%2C12.9166667%207.12522645%2C10.3055556%207.32178442%2C7.11111111%20C7.49026268%2C4.5%209.65240036%2C2.36111111%2012.2918931%2C2.19444444%20C15.4929801%2C2%2018.1605525%2C4.61111111%2017.9639946%2C7.80555556%20C17.7955163%2C10.4444444%2015.6614583%2C12.5555556%2012.9938859%2C12.7222222%20Z%20M12.8534873%2C10.3055556%20C11.1125453%2C10.4166667%209.70855978%2C9%209.79279891%2C7.27777778%20C9.87703804%2C5.86111111%2011.0283062%2C4.72222222%2012.4603714%2C4.63888889%20C14.2013134%2C4.52777778%2015.6052989%2C5.94444444%2015.5210598%2C7.66666667%20C15.4368207%2C9.05555556%2014.2574728%2C10.2222222%2012.8534873%2C10.3055556%20Z%22%20id%3D%22Shape%22%20fill%3D%22%234D4D4D%22%20fill-rule%3D%22nonzero%22%3E%3C%2Fpath%3E%20%3C%2Fg%3E%20%3C%2Fsvg%3E');
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
