HB-3015 Adding adoptapet/vue

--- a/src/styles/modules/_m-fields.scss
+++ b/src/styles/modules/_m-fields.scss
@@ -1,4 +1,8 @@
 @include b('form') {
+  @include element('text-field-container') {
+    position: relative;
+    width: 100%;
+  }
   @include element('input') {
     @include border(1px solid color(agray, light));
     border-radius: $border-radius;
