HB-3013 progress on modal

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -84,3 +84,15 @@
     @content;
   }
 }
+
+@mixin is($state) {
+  &.is-#{$state} {
+    @content;
+  }
+}
+
+@mixin state($state) {
+  @include is($state) {
+    @content;
+  }
+}
