--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -1,84 +1,70 @@
 +b('modal-popup')
-  background: rgba(255, 255, 255, .9)
-  display: flex
   align-items: center
-  justify-content: center
-  position: fixed
-  top: 0
-  left: 0
-  right: 0
+  background: rgba(255, 255, 255, .9)
   bottom: 0
-  overflow-y: auto
-  overflow-x: hidden
-  z-index: 1000
+  display: flex
+  justify-content: center
+  left: 0
   opacity: 0
+  overflow-x: hidden
+  overflow-y: auto
+  position: fixed
+  right: 0
+  top: 0
   transition: all .5s cubic-bezier(0.23, 1, 0.32, 1)
+  z-index: 1000
   -webkit-overflow-scrolling: touch
 
-  +m('active')
-    visibility: visible
+  +is('active')
     opacity: 10
+    visibility: visible
+    z-index: 100000
 
   +m('align-top')
     align-items: flex-start
 
   +e('dialog')
     max-width: 90%
-    width: 90%
     padding: 50px 0
+    width: 90%
 
   +e('content')
-    position: relative
-    background-clip: padding-box
-    opacity: 0
-    transition: all .5s cubic-bezier(0.23, 1, 0.32, 1)
     @include border-radius(6px)
-    background: #ffffff
+    background-clip: padding-box
+    background: #fff
     box-shadow: 0px 0px 0px 6px color(ablue)
+    position: relative
     width: 100%
-  
-    &--active
-      opacity: 1
 
   +e('close')
+    cursor: pointer
     z-index: 1100
-    cursor: pointer
-   
-  
-  +e('trigger')
-    position: relative
-    display: inline-block
-    padding: (2.4rem / 2) 2.4rem
-    color: rgba(black, 0.7)
-    line-height: 1
-    cursor: pointer
-    -webkit-tap-highlight-color: rgba(0,0,0,0)     
-    user-select: none
-    transition: all .5s cubic-bezier(0.23, 1, 0.32, 1)
-   
-  &--active
-    z-index: 100000
-  
-  &__close-svg
+    position: absolute
+    top: 0
+    right: 0
+    padding: 20px 20px 0 0
+    transition: all .5s cubic-bezier(.23,1,.32,1)
+
+  +e('close-svg')
     pointer-events: none
 
+  +e('sticky-close')
+    .modal__closer
+      right: 20px
+      top: 10px
+
 @media screen and (max-width: 977px)
-  .modal-popup__dialog
-    padding: 0
-    max-width: 100% !important
-    width: 100%
+  +b('modal-popup')
+    background: #fff
 
-  .modal-popup__content
-    border-radius: 0
-    box-shadow: none
+    +e('dialog')
+      max-width: 100% !important
+      padding: 0
+      width: 100%
 
-  .modal-popup__bg
-    background: #ffffff
+    +e('content')
+      border-radius: 0
+      box-shadow: none
 
-  .sticky-close
-    background: $sticky-close-grey
-
-.sticky-close
-  .modal__closer
-    right: 20px
-    top: 10px
+    +e('sticky-close')
+      background: $sticky-close-grey
