HB-3013 System build

--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -68,7 +68,7 @@
       width: 100%
 
     +e('close')
-      padding: $space-xxs
+      padding: $space-xxxs
       right: $space-l
       top: 0
 
