--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -1,6 +1,7 @@
 +b(dropdown)
   +reset
   position: relative
+  font-size: 1.25rem
 
   +is(full)
     .#{_b(dropdown) + _e(arrow)}
@@ -10,6 +11,24 @@
     .#{_b(dropdown) + _e(list)}
       opacity: 1
       visibility: visible
+
+  +m(native)
+    select
+      +reset
+      +rem-fallback('padding-left', $space-xs)
+      +rem-fallback('padding-top', $space-xxs)
+      appearance: none
+      background-color: transparent
+      border: 0
+      font-size: 1.25rem
+      height: 100%
+      left: 0
+      position: absolute
+      top: 0
+      width: 100%
+
+      &:focus
+        outline: none
 
   +e(arrow)
     +rem-fallback('height', 7px)
@@ -60,3 +79,39 @@
     +is(selected)
       color: color(ablue)
       font-weight: 400
+
+  +e(info-icon)
+    position: absolute
+    +rem-fallback('right', $space-xxs)
+    +rem-fallback('top', $space-xs)
+
++b(info-bubble)
+  +rem-fallback('bottom', 60px)
+  +rem-fallback('max-width', 185px)
+  background: color(awhite)
+  border-radius: $radius-m
+  box-shadow: $shadow-callout
+  position: absolute
+  right: 0
+
+  &::after
+    +border(8px solid color(ablack))
+    +rem-fallback('margin-left', 152px)
+    +rem-fallback('right', $space-s)
+    border-color: transparent transparent color(awhite) color(awhite)
+    box-shadow: $shadow-callout
+    box-sizing: border-box
+    content: ''
+    height: 0
+    margin-left: 1.8em
+    position: absolute
+    transform-origin: 0 0
+    transform: rotate(315deg)
+    width: 0
+    z-index: 100
+
+  +e(content)
+    +font-size(14)
+    +rem-fallback('line-height', 22px)
+    +rem-fallback('padding', 20px)
+    font-weight: 300
