--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -56,7 +56,8 @@
     opacity: 0
     position: absolute
     top: 3.25rem
-    transition: opacity .25s ease-in-out
+    transition: all .25s ease-in-out
+    transition-property: visibility, opacity
     visibility: hidden
     width: 100%
     z-index: 10
