--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -35,7 +35,7 @@
 
   +e(error-msg)
     @include rem-fallback('font-size', $font-size-xs)
-    @include rem-fallback('line-height', $line-height-xxs)
+    @include rem-fallback('line-height', $line-height-xxxxs)
     @include rem-fallback('right', $space-xs)
     @include rem-fallback('top', $space-m)
     color: color(aorange)
