HB-3224 Working right slot

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -1,5 +1,6 @@
-@import "m-fields";
-@import "m-modal";
+@import 'm-fields';
+@import 'm-modal';
 @import 'm-radio-buttons';
-@import "m-dropdown";
+@import 'm-dropdown';
 @import 'm-textarea';
+@import 'm-tooltip';
