--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -6,7 +6,7 @@
   +is(full)
     .#{_b(dropdown) + _e(arrow)}
       transform: rotate(0.5turn)
-      +rem-fallback('top', $space-s)
+      margin-top: 0
 
     .#{_b(dropdown) + _e(list)}
       opacity: 1
@@ -32,17 +32,12 @@
 
   +e(arrow)
     +rem-fallback('height', 7px)
+    +rem-fallback('margin-top', $space-xxxxs)
     +rem-fallback('width', 13px)
-    +rem-fallback('right', $space-xs)
-    +rem-fallback('top', $space-m)
     border: 7px solid transparent
     border-top: 7px solid #4d4d4d
     pointer-events: none
-    position: absolute
     transition: all 300ms ease-in-out
-
-    +m(small)
-      top: 37%
 
   +e(list)
     background-color: #fff
@@ -80,39 +75,3 @@
     +is(selected)
       color: color(ablue)
       font-weight: 400
-
-  +e(info-icon)
-    position: absolute
-    +rem-fallback('right', $space-xxs)
-    +rem-fallback('top', $space-xs)
-
-+b(info-bubble)
-  +rem-fallback('bottom', 60px)
-  +rem-fallback('max-width', 185px)
-  background: color(awhite)
-  border-radius: $radius-m
-  box-shadow: $shadow-callout
-  position: absolute
-  right: 0
-
-  &::after
-    +border(8px solid color(ablack))
-    +rem-fallback('margin-left', 152px)
-    +rem-fallback('right', $space-s)
-    border-color: transparent transparent color(awhite) color(awhite)
-    box-shadow: $shadow-callout
-    box-sizing: border-box
-    content: ''
-    height: 0
-    margin-left: 1.8em
-    position: absolute
-    transform-origin: 0 0
-    transform: rotate(315deg)
-    width: 0
-    z-index: 100
-
-  +e(content)
-    +font-size(14)
-    +rem-fallback('line-height', 22px)
-    +rem-fallback('padding', 20px)
-    font-weight: 300
