--- a/src/styles/modules/_m-tooltip.sass
+++ b/src/styles/modules/_m-tooltip.sass
@@ -3,17 +3,18 @@
   overflow: visible
 
   +e(bubble)
-    +rem-fallback('bottom', $space-xl)
-    +rem-fallback('right', -$space-xs)
+    margin-left: auto
+    margin-right: 0
+    right: 0
     background: color(awhite)
     border-radius: $radius-m
     box-shadow: $shadow-callout
-    position: absolute
+    position: relative
+    display: inline-block
 
     &::after
       +border(8px solid color(ablack))
-      +rem-fallback('margin-left', 152px)
-      +rem-fallback('right', $space-s)
+      +rem-fallback('left', $space-xxxxl)
       border-color: transparent transparent color(awhite) color(awhite)
       box-shadow: $shadow-callout
       box-sizing: border-box
@@ -31,3 +32,10 @@
     +rem-fallback('line-height', 22px)
     +rem-fallback('padding', 20px)
     font-weight: 300
+    position: relative
+
+  +e(bubble-container)
+    +rem-fallback('width', $width-tooltip)
+    +rem-fallback('left', -($width-tooltip / 2))
+    +rem-fallback('bottom', $space-xl)
+    position: absolute
