HB-3224 Fix pointer-events for tooltip

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -154,6 +154,7 @@
       flex-flow: row nowrap
       font-weight: $weight-bold
       left: auto
+      pointer-events: none
       position: absolute
       vertical-align: middle
 
