--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -65,7 +65,8 @@
     cursor: pointer
     font-size: 1.25rem
     font-weight: 200
-    padding: .625rem 2rem .625rem 1.25rem
+    +rem-fallback('padding', $space-xs)
+    position: relative
 
     &:hover
       color: #4d4d4d
@@ -75,3 +76,11 @@
     +is(selected)
       color: color(ablue)
       font-weight: 400
+
+  +e(list-check)
+    float: right
+
+    svg
+      +reset
+      width: 14px
+      height: 18px
