--- a/src/styles/modules/_m-value-lists.sass
+++ b/src/styles/modules/_m-value-lists.sass
@@ -1,4 +1,4 @@
-+b(pet-facts)
++b(value-list)
   +breakpoint(tiny)
     @include rem-fallback('padding', 30px 0)
 
@@ -24,41 +24,41 @@
       height: auto
       justify-content: unset
 
-    +m(section)
-      word-break: break-word
-      display: flex
-      @include rem-fallback('margin-top', 10px)
+  +e(item)
+    word-break: break-word
+    display: flex
+    @include rem-fallback('margin-top', 10px)
 
-      +breakpoint(tiny)
-        flex: 0 0 100%
+    +breakpoint(tiny)
+      flex: 0 0 100%
 
-      +breakpoint(normal)
-        flex: 0 0 calc(50% - 12px)
-        @include rem-fallback('margin-top', 15px)
+    +breakpoint(normal)
+      flex: 0 0 calc(50% - 12px)
+      @include rem-fallback('margin-top', 15px)
 
-        &:nth-of-type(1)
-          order: 1
+      &:nth-of-type(1)
+        order: 1
 
-        &:nth-of-type(2)
-          order: 3
+      &:nth-of-type(2)
+        order: 3
 
-        &:nth-of-type(3)
-          order: 5
+      &:nth-of-type(3)
+        order: 5
 
-        &:nth-of-type(4)
-          order: 2
+      &:nth-of-type(4)
+        order: 2
 
-        &:nth-of-type(5)
-          order: 4
+      &:nth-of-type(5)
+        order: 4
 
-        &:nth-of-type(6)
-          order: 6
+      &:nth-of-type(6)
+        order: 6
 
-      +breakpoint(tablet-plus)
-        flex: 0 0 100%
+    +breakpoint(tablet-plus)
+      flex: 0 0 100%
 
-        &:nth-of-type(1n+1)
-          order: unset
+      &:nth-of-type(1n+1)
+        order: unset
 
     +m(full-width)
       flex-wrap: wrap
