--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -27,11 +27,11 @@
       background-color: color(awhite, base)
 
   +e(label)
-    +rem-fallback('line-height', $line-height-s)
+    +rem-fallback('line-height', $line-height-h5)
     vertical-align: text-bottom
 
     +m(size-small)
-      +rem-fallback('line-height', $line-height-xs)
+      +rem-fallback('line-height', $line-height-h6)
 
   +e(check)
     svg
