--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -85,7 +85,7 @@
 
   +e(error-msg)
     +rem-fallback(font-size, $font-size-xs)
-    +rem-fallback(line-height, $line-height-xxs)
+    +rem-fallback(line-height, $line-height-h5v2)
     +rem-fallback(right, $space-xs)
     +rem-fallback(top, $space-xxxxs)
     color: color(aorange)
@@ -102,13 +102,13 @@
       +is(smaller)
         +rem-fallback(font-size, $font-size-xs)
         +rem-fallback(left, $space-xs)
-        +rem-fallback(line-height, $line-height-xxs)
+        +rem-fallback(line-height, $line-height-h5v2)
         +rem-fallback(top, $space-xxxxs)
         font-weight: $weight-bold
 
     +m(right)
       +rem-fallback(font-size, $font-size-xs)
-      +rem-fallback(line-height, $line-height-xxs)
+      +rem-fallback(line-height, $line-height-h5v2)
       position: initial
       float: left
       font-weight: $weight-bold
@@ -141,7 +141,7 @@
 
   +e(slot)
     +m(right)
-      +rem-fallback(height, $line-height-s)
+      +rem-fallback(height, $line-height-h5)
       +rem-fallback(right, $space-xs)
       +rem-fallback(top, $space-s)
       display: flex
