--- a/docs/docs.tokens.scss
+++ b/docs/docs.tokens.scss
@@ -61,6 +61,6 @@ $space-s: 16px !default;
 $space-xs: 8px !default;
 $space-xx-small: 4px !default;
 
-$line-height-m: 1.6 !default;
-$line-height-s: 1.3 !default;
-$line-height-xs: 1 !default;
+$line-height-h4: 1.6 !default;
+$line-height-h5: 1.3 !default;
+$line-height-h6: 1 !default;
