--- a/src/styles/modules/_m-textarea.sass
+++ b/src/styles/modules/_m-textarea.sass
@@ -35,7 +35,7 @@
 
   +e(error-msg)
     @include rem-fallback('font-size', $font-size-xs)
-    @include rem-fallback('line-height', $line-height-xxxxs)
+    @include rem-fallback('line-height', $line-height-h6v2)
     @include rem-fallback('right', $space-xs)
     @include rem-fallback('top', $space-m)
     color: color(aorange)
@@ -45,7 +45,7 @@
 
   +e(text-limit)
     +rem-fallback('font-size', $font-size-xs)
-    +rem-fallback('line-height', $line-height-xs)
+    +rem-fallback('line-height', $line-height-h6)
     font-weight: 200
     letter-spacing: 0
     text-align: right
