--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -83,7 +83,7 @@
       +rem-fallback('line-height', $line-height-h4v3)
 
     &--x-x-compact
-      +rem-fallback('line-height', $line-height-small)
+      +rem-fallback('line-height', $line-height-h4v3museo)
 
     &--museo
       font-family: $font_museo
@@ -113,7 +113,7 @@
       +rem-fallback('line-height', $line-height-h5v2)
 
     &--x-compact
-      +rem-fallback('line-height', $line-height-xxxs)
+      +rem-fallback('line-height', $line-height-h5v2museo)
 
     &--museo
       font-family: $font_museo
