HB-3003 Build fixes

--- a/src/styles/modules/_index.scss
+++ b/src/styles/modules/_index.scss
@@ -1,4 +1,5 @@
-@import "m-checkbox";
+@import 'm-button';
+@import 'm-checkbox';
 @import 'm-dropdown';
 @import 'm-fields';
 @import 'm-headings';
