HB-3111: Use period icon

--- a/src/styles/modules/_m-status-list.sass
+++ b/src/styles/modules/_m-status-list.sass
@@ -37,15 +37,10 @@
 
     +m('state-tick')
       +rem-fallback('margin-top', 5px)
-      background: url('/icons/aap-icon-check.svg')
-      background-repeat: no-repeat
-      background-position: 96% center
       align-self: flex-start
 
     +m('state-exclamation')
       +rem-fallback('margin-top', 4px)
-      background: url('/icons/aap-icon-exclamation.svg')
-      background-repeat: no-repeat
-      background-position: center
       +rem-fallback('height', 17px)
+      +rem-fallback('padding-left', 4px)
       align-self: flex-start
